Fix dark mode active sidebar link color.

--- a/docs/.vuepress/theme/styles/base.pcss
+++ b/docs/.vuepress/theme/styles/base.pcss
@@ -6,6 +6,7 @@
   --medium-zoom-overlay-color: theme("colors.soft");
   --heading-color: theme("colors.slate");
   --sidebar-link-color: theme("colors.slate");
+  --sidebar-active-link-color: theme("colors.blue");
   --hamburger-color: theme("colors.black");
   --tooltip-bg-color: theme("colors.white");
   --border-color: #e2e8f0;
